# matching

./: .editorconfig  .gitignore  README  README.md  dev-requirements.txt  dodo.py  ops  pyproject.toml  pytest.ini  requirements.txt  root  version
backend/: auth.py  cache.py  db.py  exceptions.py  matching.xsd  models.py  utils.py  views.py  xml.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Sidebar.tsx  accordion.tsx  api.tsx  dropzone.tsx  index.css  layout.tsx  login.tsx  main.tsx  menuEntry.tsx  noDatasource.tsx  nosample.tsx  sampleSlice.js  sampleSlice.tsx  sampleTable.tsx  samplingConfiguration.tsx  selectors.tsx  store.js  testData.tsx  utils.tsx
project/: .editorconfig  asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_api.py  test_bdd.py  test_xml_parsing.py
tests/fixtures/: appariement_qualite_ij_apprenti_champ_2018_2019_ij_sia_apprenti_01122018_31122018.xml  appariement_qualite_ij_apprenti_champ_restreint_2018_2019_ij_sismmo_salarie_01122018_31122018.xml  no_port.xml  wrong_col.xml  wrong_netloc.xml
